--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "endroid/qr-code": "^5.0",
         "ladumor/laravel-pwa": "^0.0.5",
         "laravel/framework": "^12.0",
