--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "endroid/qr-code": "^5.0",
+        "firebase/php-jwt": "^6.11",
+        "guzzlehttp/guzzle": "^7.9",
         "ladumor/laravel-pwa": "^0.0.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
