--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -146,21 +146,22 @@ jobs:
           prerelease: false
 
   # Optional: Security scanning job
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: success()
+# security-scan:
+#   runs-on: ubuntu-latest
+#   needs: build-and-push
+#   if: success()
+#
+#   steps:
+#     - name: Run Trivy vulnerability scanner
+#       uses: aquasecurity/trivy-action@master
+#       with:
+#         image-ref: ${{ env.DOCKERHUB_REPOSITORY }}:${{ env.git-tag }}
+#         format: 'sarif'
+#         output: 'trivy-results.sarif'
+#
+#     - name: Upload Trivy scan results to GitHub Security tab
+#       uses: github/codeql-action/upload-sarif@v2
+#       if: always()
+#       with:
+#         sarif_file: 'trivy-results.sarif'
 
-    steps:
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.DOCKERHUB_REPOSITORY }}:${{ env.git-tag }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
